# attercop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  03_dependency_management_guide.md  CHANGELOG.md  DOCKER_INSTRUCTIONS.md  Dockerfile  README.md  check.sh  comprehensive_secret_scan.sh  custom.py  custom2.py  docker-composeV1.yaml  docker-composeV2.yaml  main.py  pre.yaml  pyproject.toml  pyproject_ORIG.toml  requirements.txt  scan_secrets.py  scan_secrets.sh  secret_detection_hook.sh  semantic_release_poc.txt  update_version.py  uv.config.json
.github/: github_actions_changelog_commit.yaml  init.yaml  list_commits_workflow.txt  modal-secrets-app-list.yaml  modal_deploy_workflow.yaml
.github/templates/: 01_reuseable_build.yml  08-variables.yaml  ci_template.yaml  create_github_release.yaml  modal_deploy_workflow.yaml  package_compatability.yaml  run_uv_pytest.yaml
.github/templates/best_practices/: best_practices.sh  best_practices.toml  best_practices.yaml  best_practices_dependabot.yaml  best_practices_precommit.yaml
.github/templates/cicd/: ci_template.yaml  docker_validate_build.yaml  docker_validate_build_scan.yaml  docker_validate_build_scanV1.yaml  github_actions_cicd.yaml  next_version.yaml  uv_run_lint_tests.yaml  uv_run_lint_tests_calc_matrix.yaml  uv_run_lint_tests_calc_matrix_security.yaml  vars.yaml
.github/templates/core/: download_version.yaml
.github/workflows/: 01_reuseable_build.yml  01_reuseable_caller_workflow.yaml  caller_workflow.yaml  ci.yaml  ci_fixed.yaml  complete_docker_calculator.yaml  docker.yaml  docker_validate.yaml  docker_validate_build.yaml  docker_validate_build_scan.yaml  docker_validate_build_scan_deploy.yaml  fixed_workflow.txt  github_actions_changelog_commit.yaml  list_all_commits.yaml  pytest_coverage_workflow.yaml  release.yaml  release_orig.txt  release_workflow_ruff_pyright.txt  reusable_workflow.yaml  run_terminus_uv_pytest.yaml  run_uv_pytest.yaml  uv_pytest_html.yaml  uv_run_lint_tests.yaml  uv_run_lint_tests_calc.yaml  uv_run_lint_tests_calc_matrix.yaml  uv_run_lint_tests_calc_matrix_security.yaml  vars.yaml
CI_CD_NOTES/: 00_ci_cd_actual.docx  00_ci_cd_actual.md  01_complete_chain_python_security_guide.md  02_extra.md  UV.md  github_actions_guide.html  ~$_ci_cd_actual.docx
CI_CD_NOTES/01_PRECOMMIT/: package_compatibility.md
CI_CD_NOTES/02_CI/: DockerfileMultiple  cicd_pipeline.yaml  dependency_checker.yaml  how_to_use_dependabot.md  what_is_gitleaks.md
CI_CD_NOTES/02_CI/Docker_test_python-Version/: build_script.sh  gha_docker.yaml  sample_requirements.txt
CI_CD_NOTES/03_CD/: 00_ci_cd_actual.docx
CI_CD_NOTES/04_EVALS/: 01_EvalOps.docx
CI_CD_NOTES/05_BEST_PRACTICES/: 01_complete_chain_python_security_guide.md
notes/: claude_actions.md  create_github_release.txt  enhanced_cicd_pipeline.txt  fixed_workflow.txt  other_checks.md  release.yaml  what_is_bandit.md  what_is_codeql.md
notes/START/: 01_complete_chain_python_security_guide.md  cicd_pipeline.txt  config_files.txt  how-to-test-docker-muliptle-python.md  secret_detection_hook.sh
notes/START/01_PRECOMMIT/: 02_all_precommit_config.yaml  secrets_setup_instructions.md
notes/START/02_CI/: security_setup.md
notes/START/02_CI/Docker_test_python-Version/: python_dockerfile.yaml  sample_requirements.txt
notes/START/Docker_test_python-Version/: python_dependency_workflow_uv.txt  python_dependency_workflow_uv.yaml  python_dockerfile.txt
notes/START/Docker_test_python-Version/secret_detection_custom/: no_secrets_precommit.md  secret_detection_precommit.yaml
src/: modal_app.py
src/calculator/: __init__.py  _version.py  calculator.py  secrets.py
tests/: test_calculator.py
